2016-09-20 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-2.
  * gogarchsim now takes either a goGARCHfit or goGARCHfilter object. First argument
  to gogarchsim (fit) replaced by 'object'. This allows better handling of the simulated
  forecast density by first filtering for new data from a filtered object
  and then simulating the n-ahead density.

2016-02-20 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-1.
	* Fix to fscenario function (would not run when using dcc or cgarch).

2015-12-27 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-0.
	* Fix to dccsim when using startMethod sample. The
	wrong standardized residuals were being passed
	to the simulation routine.
	* Some fixes to some wrongly exported methods from other packages.

2015-07-02 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-9.
	* Fixes to pass new CRAN checks which only attaches base now.
	* Fixed bug in fscenario for gogarch model with dimensionality reduction.

2014-06-11 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-8.
	* Removed fftw dependency
	* Fix to Copula-Student Simulation.
	* Added logical argument for inclusion or not of 'constant'
	in varxfit function and updated related functions (filter,
	forecast and sim) to take this into account [user request].

2014-03-07 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-7.
	* Fix to multivariate Student and Laplace random number generation for
	DCC simulation methods.

2014-01-26 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-6.
	* Fix for solaris build [thanks to BDR].

2014-01-25 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.2-5.
	* Patched to work with recent changes to Rcpp.

2014-01-05 Alexios Ghalanos <alexios@4dscape.com>