@@ -1,3 +1,9 @@
+2017-06-01 Alexios Ghalanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.3-3.
+	* Added option to use cluster on the window dimension rather than assets
+	in dccroll.
+	* Numerous minor changes to underlying functionality.
+	
 2016-09-20 Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-2.
   * gogarchsim now takes either a goGARCHfit or goGARCHfilter object. First argument
